Fixed border-radius of scrollbar in ProjectsToggle section. Added external links to skill icon SVGs in AboutToggle section.

--- a/src/styles/less/Sections/Projects.less
+++ b/src/styles/less/Sections/Projects.less
@@ -8,10 +8,11 @@
   .flex-attributes(column, center, center);
 
   // Custom scrollbar
-  @media (min-width: 501px) {
+  @media (min-width: 501px) and (orientation: landscape) {
     ::-webkit-scrollbar {
       width: 1rem;
       background: inherit;
+      border-radius: 0.5rem;
     }
 
     ::-webkit-scrollbar-track {
